google-site-verification

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="buy new phones, phone accessories, mobile phones Nigeria, cheap phones, Holy Bishop Communicatio Plaza, original phone chargers, earphones, power banks, smartphone store, communication gadget, phone shop near me, phone plaza Nigeria">
         <meta name="author" content="Holy Bishop Communication Plaza">
         <meta name="robots" content="index, follow">
-        <meta name="google-site-verification" content="6ZI8-doYwRLMISOfQm6FTVt8ISS0EGDysp3TjeBhchU" />
+        <meta name="google-site-verification" content="sEbkJb6XAGPmZbGbH8nmCLw0EJUId7zgNKgWbrAYOUE">
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="stylesheet" href="styles/header.css">
         <link rel="stylesheet" href="styles/footer.css">
